# ot-harjoitustyo

./: .gitignore  README.md
2048/: .coveragerc  .pylintrc  pyproject.toml  tasks.py
2048/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
2048/dokumentaatio/kuvat/: kayttoohje.md
2048/src/: clock.py  database_connection.py  display.py  event_queue.py  game_logic.py  game_loop.py  index.py  initialize_database.py  user_repository.py
2048/src/entities/: user.py
2048/src/repositories/: user_repository.py
2048/src/tests/: conftest.py  game_logic_test.py  game_loop_test.py
dokumentaatio/: tyoaikakirjanpito.md  vaatimusmaarittely.md
laskarit/: viikko1.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli-luokkakaavio.md
