[project]
name = "2048"
version = "0.1.0"
description = ""
authors = [
    {name = "Ville Davidsson",email = "ville.d@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
