[project]
name = "maksukortti"
version = "0.1.0"
description = ""
authors = [
    {name = "Ville Davidsson",email = "ville.d@hotmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

